# Unheard-Engine

./: .gitignore  BumpTextures.txt  CMakeLists.txt  GammaTextures.txt  LICENSE  README.md  SDK Dependency.txt  UHESettings.ini  UHE_CodingStandard.docx  UnheardEngine.aps  UnheardEngine.cpp  UnheardEngine.h  UnheardEngine.rc  UnheardEngine.sln  UnheardEngine.vcxproj  UnheardEngine.vcxproj.filters  changelog.txt  changelog2024.txt  changelog2025.txt  changelog2026.txt  framework.h  imgui.ini  resource.h
Editor/: FbxImporter.cpp  FbxImporter.h  GeometryUtility.h  Profiler.cpp  Profiler.h  ShaderImporter.cpp  ShaderImporter.h  TextureImporter.cpp
Editor/Classes/: DetailView.cpp  DetailView.h  EditorUtils.cpp  EditorUtils.h  FbxImporter.cpp  FbxImporter.h  GUIDefines.h  GeometryUtility.h  GraphNodeGUI.cpp  GraphNodeGUI.h  MaterialImporter.cpp  MaterialImporter.h  MathNodeGUI.cpp  MathNodeGUI.h  MenuGUI.cpp  MenuGUI.h  ParameterNodeGUI.cpp  ParameterNodeGUI.h  Reflection.h  ShaderImporter.cpp  ShaderImporter.h  TextureImporter.cpp  TextureImporter.h  (+2 more)
Game/: UHDemoScript.cpp  UHDemoScript.h
Runtime/: Application.cpp  Application.h  CoreGlobals.cpp  CoreGlobals.h
Shaders/: BaseAmplificationShader.hlsl  BaseMeshShader.hlsl  BasePixelShader.hlsl  BaseVertexShader.hlsl  BlockCompressionNewShader.hlsl  BlockCompressionOldShader.hlsl  ClearUAVComputeShader.hlsl  DepthMeshShader.hlsl  DepthPassShader.hlsl  DepthPixelShader.hlsl  DepthVertexShader.hlsl  DownsampleDepth.hlsl  FallbackPixelShader.hlsl  IndirectLightComputeShader.hlsl  LightComputeShader.hlsl  LightCullingComputeShader.hlsl  LightPixelShader.hlsl  MeshPreviewShader.hlsl  MotionCameraShader.hlsl  MotionMeshShader.hlsl  MotionPixelShader.hlsl  MotionVectorShader.hlsl  MotionVertexShader.hlsl  PanoramaToCubemap.hlsl  PanoramaToCubemapShader.hlsl  PostProcessVS.hlsl  ReflectionComputeShader.hlsl  SkyboxPixelShader.hlsl  SkyboxVertexShader.hlsl  SmoothCubemapComputeShader.hlsl  SphericalHarmonicComputeShader.hlsl  TranslucentPixelShader.hlsl  UHCommon.hlsli  UHInputs.hlsli  UHLightCommon.hlsli  UHMaterialCommon.hlsli  UHMeshShaderCommon.hlsli  UHSphericalHamonricCommon.hlsli  UHWaveCommon.hlsli
(+312 files in other folders)
